# agentic_ai_demo

./: .gitignore  README.md  agent.py  agent_with_sql.py  fake_data_generator.py  langgraph.json  live_data_simulator.py  main.py  pyproject.toml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
data/: lt_walmart_data.db
outputs/: result.csv
